# rust-api

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs  state.rs
src/models/: mod.rs  post.rs  user.rs
src/routes/: auth.rs  mod.rs  posts.rs  social.rs
